Update 4.0
He terminado grandes partes del menu principal, finalmente he añadido la mayoria de interacciones del usuario root.

- Inicio y registro de usuario.
- Administración de la cuenta.
- He modificado parte de la "DataBase"